--- a/package.json
+++ b/package.json
@@ -9,13 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.3",
+    "@aws-sdk/client-s3": "^3.437.0",
+    "@sendgrid/mail": "^7.7.0",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
+    "mime-types": "^2.1.35",
+    "mongodb": "^6.2.0",
+    "mongoose": "^7.6.3",
+    "multiparty": "^4.2.3",
     "next": "13.5.6",
+    "next-auth": "^4.24.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.1.0",
     "tailwindcss": "3.3.4"
   }
 }
