--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.3",
     "@aws-sdk/client-s3": "^3.437.0",
+    "@nextui-org/react": "^2.2.8",
     "@sendgrid/mail": "^7.7.0",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
+    "framer-motion": "^10.16.4",
     "mime-types": "^2.1.35",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
@@ -26,6 +28,7 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "styled-components": "^6.1.0",
     "tailwindcss": "3.3.4"
   }
